# cpp-webview-gui

./: .asan_suppressions  .gitignore  CMakeLists.txt  README.md  format-code.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml
cmake/: EmbedFile.cmake  clang_toolchain.cmake
include/: embedded_resources.h  expected.hpp  option_parser.hpp  option_parser_decls.hpp  option_parser_impl.hpp
src/: dev_server.h  lib.cpp  main.cpp
src/app/: application.h  application_static.cpp  bindings.h  bindings_meta.h  bindings_with_meta.h  cli_options.h  config.h  drag_tracker.cpp  drag_tracker.h  handlers.h  shutdown_monitor.h  window_manager.h  window_platform.cpp  window_platform.h
tests/: CMakeLists.txt  test.cpp
tools/: emit_native_bindings.cpp
ui/: index.html  package-lock.json  package.json  postbuild.js  tsconfig.json  vite.config.js
ui/src/: App.vue  dock_panels.js  main.js  style.css
ui/src/panels/: ConsolePanel.vue  InspectorPanel.vue  ScratchPanel.vue  TimelinePanel.vue  WelcomePanel.vue  panel_utils.js
ui/tools/native-bindings-plugin/: README.md  package-lock.json  package.json  tsconfig.json
ui/tools/native-bindings-plugin/src/: index.ts  shims-node.d.ts
